# BetterEdit

./: .gitignore  CMakeLists.txt  README.md  changelog.md  mod.json  support.md
.github/workflows/: build.yml
openssl/: OpenSSL.cmake
scripts/: CreateCircle.js  CreateCircle.mjs  DeselectRandom.js  OhNo.js  Std.ts  Test.swipe  Worker.js  jsconfig.json
src/features/: BetterColorSelect.cpp  BetterSelect.cpp  ButtonRowsBypass.cpp  CopyParticleString.cpp  EditMixedValues.cpp  FixMouseControls.cpp  GridScaling.cpp  GroupSummaryPopup.cpp  GroupSummaryPopup.hpp  ImprovedScaleAndRotate.cpp  Keybinds.cpp  MoveMenu.cpp  PinchToZoom.cpp  TriggerIndicators.cpp  TriggerPreview.cpp  TypeInZLayer.cpp  WrapMouseAround.cpp
src/features/ViewTab/: ViewTab.cpp
src/features/about/: AboutBEButton.cpp  AboutBEPopup.cpp  AboutBEPopup.hpp  ChangelogPopup.cpp  SupportPopup.cpp
src/features/backups/: Backup.cpp  BackupsUI.cpp  GMD.hpp  QuickSave.cpp
src/features/scaling/: EditorUIScaling.cpp
src/features/scripting/: QJS.cpp  QJS.hpp  Scripting.cpp  Scripting.hpp  ScriptingUI.cpp  ScriptingUI.hpp
src/features/supporters/: ActivateLicensePopup.cpp  ActivateLicensePopup.hpp  MySupportPopup.cpp  MySupportPopup.hpp  Pro.cpp  Pro.hpp  SupportersPopup.cpp  SupportersPopup.hpp  UpdateUserCache.cpp
src/server/: OpenSSL.cpp  OpenSSL.hpp  Server.cpp  Server.hpp
src/utils/: BEMenuItemToggler.hpp  Editor.cpp  Editor.hpp  NextFreeOffsetInput.cpp  NextFreeOffsetInput.hpp  ObjectIDs.hpp
